// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions fetchActiveViewTickets should fetch tickets 1`] = `
Array [
  Object {
    "discreet": true,
    "type": "FETCH_LIST_VIEW_START",
    "viewId": 1,
  },
]
`;

exports[`actions fetchViewItems should fetch current page with cursor 1`] = `
Array [
  Object {
    "discreet": false,
    "type": "FETCH_LIST_VIEW_START",
    "viewId": 1,
  },
  Object {
    "data": Object {
      "data": Array [
        Object {
          "id": 1,
        },
        Object {
          "id": 2,
        },
      ],
      "meta": Object {
        "current_cursor": 123,
        "next_items": "/api/views/1/items?direction=next",
        "prev_items": "/api/views/1/items?direction=prev",
      },
    },
    "type": "FETCH_LIST_VIEW_SUCCESS",
    "viewType": "ticket-list",
  },
]
`;

exports[`actions fetchViewItems should fetch current page without cursor 1`] = `
Array [
  Object {
    "discreet": false,
    "type": "FETCH_LIST_VIEW_START",
    "viewId": 1,
  },
  Object {
    "data": Object {
      "data": Array [
        Object {
          "id": 1,
        },
        Object {
          "id": 2,
        },
      ],
      "meta": Object {
        "current_cursor": 123,
        "next_items": "/api/views/1/items?direction=next",
        "prev_items": "/api/views/1/items?direction=prev",
      },
    },
    "type": "FETCH_LIST_VIEW_SUCCESS",
    "viewType": "ticket-list",
  },
]
`;

exports[`actions fetchViewItems should fetch next page 1`] = `
Array [
  Object {
    "discreet": false,
    "type": "FETCH_LIST_VIEW_START",
    "viewId": 1,
  },
  Object {
    "data": Object {
      "data": Array [
        Object {
          "id": 1,
        },
        Object {
          "id": 2,
        },
      ],
      "meta": Object {
        "current_cursor": 123,
        "next_items": "/api/views/1/items?direction=next",
        "prev_items": "/api/views/1/items?direction=prev",
      },
    },
    "type": "FETCH_LIST_VIEW_SUCCESS",
    "viewType": "ticket-list",
  },
]
`;

exports[`actions fetchViewItems should fetch prev page 1`] = `
Array [
  Object {
    "discreet": false,
    "type": "FETCH_LIST_VIEW_START",
    "viewId": 1,
  },
  Object {
    "data": Object {
      "data": Array [
        Object {
          "id": 1,
        },
        Object {
          "id": 2,
        },
      ],
      "meta": Object {
        "current_cursor": 123,
        "next_items": "/api/views/1/items?direction=next",
        "prev_items": "/api/views/1/items?direction=prev",
      },
    },
    "type": "FETCH_LIST_VIEW_SUCCESS",
    "viewType": "ticket-list",
  },
]
`;

exports[`actions fetchViewItems should not dispatch FETCH_LIST_VIEW_SUCCESS because the filters of the view have changed since we started the request 1`] = `
Array [
  Object {
    "discreet": false,
    "type": "FETCH_LIST_VIEW_START",
    "viewId": 1,
  },
]
`;

exports[`actions fetchViewItems should not dispatch FETCH_LIST_VIEW_SUCCESS because the view for which we fetched items is not the current view 1`] = `
Array [
  Object {
    "discreet": false,
    "type": "FETCH_LIST_VIEW_START",
    "viewId": 1,
  },
]
`;

exports[`actions fetchViewItems should not dispatch FETCH_LIST_VIEW_SUCCESS because this fetch was caused by the polling, and the user is not currently on the first page 1`] = `
Array [
  Object {
    "discreet": true,
    "type": "FETCH_LIST_VIEW_START",
    "viewId": 1,
  },
]
`;

exports[`actions fetchViewItems should pass the view because it is dirty 1`] = `
Array [
  Object {
    "discreet": false,
    "type": "FETCH_LIST_VIEW_START",
    "viewId": 1,
  },
  Object {
    "data": Object {
      "data": Array [
        Object {
          "id": 1,
        },
        Object {
          "id": 2,
        },
      ],
      "meta": Object {
        "current_cursor": 123,
        "next_items": "/api/views/1/items?direction=next",
        "prev_items": "/api/views/1/items?direction=prev",
      },
    },
    "type": "FETCH_LIST_VIEW_SUCCESS",
    "viewType": "ticket-list",
  },
]
`;

exports[`actions updateRecentViews should update updated datetime of recent views 1`] = `
Object {
  "type": "UPDATE_RECENT_VIEWS",
  "viewIds": Array [
    1,
  ],
}
`;

exports[`actions updateRecentViews should update updated datetime of recent views 2`] = `
Array [
  Object {
    "type": "UPDATE_RECENT_VIEWS",
    "viewIds": Array [
      1,
    ],
  },
]
`;
